--- a/styles/main.css
+++ b/styles/main.css
@@ -20,6 +20,9 @@ h1,h2,h3,h4,h5,h6 {
 
 body {
 	background-color: lightblue;
+	font-family: 'Sansita Swashed', cursive;
+	font-size: larger;
+	
 }
 
 
@@ -29,6 +32,9 @@ img {
 	object-fit: cover;
 }
 .image-container {
-	background-color: lightcoral;
+	background-color: l;
 	max-height: 300px;
 }
+
+
+
